<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.whatsnew.loginActivity.LoginActivity"
    android:orientation="vertical"
    android:layout_margin="15sp"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/nointernet_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="30sp"
        android:layout_marginTop="200sp"
        android:textAlignment="center"
        android:text="@string/no_internet_connection"/>

    <LinearLayout
        android:id="@+id/login_activity_content_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="10sp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_activity_email_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_activity_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="-10sp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_activity_password_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_activity_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/login_activity_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/AppTheme.Button"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"/>

            <Button
                android:id="@+id/login_activity_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/Widget.AppCompat.Button"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"/>

            <Button
                android:id="@+id/login_activity_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:text="@string/cancel"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
