<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.whatsnew.favoriteActivity.FavoriteActivity"
    tools:showIn="@layout/activity_favorite">

    <LinearLayout
        android:id="@+id/favorite_activity_error_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_login_first"
            android:textSize="30sp"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/favorite_activity_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/login"/>

    </LinearLayout>

    <TextView
        android:id="@+id/favorite_activity_noitem_tv"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_no_interest"
        android:textSize="30sp"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/favorite_activity_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="60sp"
            android:id="@+id/favorite_activity_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

        <ProgressBar
            android:id="@+id/favorite_activity_progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:indeterminateTint="@color/background_gray_line"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_activity_refresh_fab"
            app:borderWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10sp"
            android:backgroundTint="@color/fab_blue"
            android:src="@drawable/ic_action_refresh"/>

    </RelativeLayout>


</RelativeLayout>
