<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.whatsnew.settingActivity.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <RelativeLayout
        android:id="@+id/setting_activity_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/setting_activity_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/setting_title_background">

            <android.support.v7.widget.CardView
                android:id="@+id/setting_activity_logo_container"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginTop="30sp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10sp"
                app:cardCornerRadius="50sp">

                <ImageView
                    android:id="@+id/setting_activity_user_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/user_logo"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_below="@id/setting_activity_logo_container"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/setting_activity_email_iv"
                    android:textColor="@color/color_white"
                    android:layout_margin="10sp"
                    android:layout_width="22sp"
                    android:layout_height="22sp"
                    android:src="@drawable/ic_setting_email"/>

                <TextView
                    android:id="@+id/setting_activity_email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/setting_activity_rss_layout"
            android:layout_below="@id/setting_activity_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/setting_rss_title"/>

            <View
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/background_gray_line"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/setting_activity_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/setting_activity_emptyList_tv"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/background_gray_line"
            android:text="@string/setting_rss_empty"
            android:visibility="gone"/>

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/setting_activity_add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/setting_activity_error_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_login_first"
            android:textSize="30sp"/>

        <Button
            android:layout_gravity="center"
            android:id="@+id/setting_activity_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/login"/>

    </LinearLayout>

</RelativeLayout>
